AB#1083 Move countries to locations table
- Add a new location type for countries and insert countries from STANAG
  1059 in the locations table; set a few old ones to 'inactive'.
- Replace people.country with a foreign key reference to locations.uuid.
- Migrate existing countries, using exact matches and some heuristics;
  keeping the old country names if we don't have an exact match, to give
  users the opportunity to correct this themselves.